# conduit-agent-sdk

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: phase2-plan.md  phase3-plan.md
examples/: 01_hello_world.py  02_registry_browse.py  03_streaming.py  04_multi_agent.py  05_permissions.py  06_custom_tools.py  07_file_operations.py  08_code_generation.py  09_multi_turn.py  10_hooks.py  11_proxy_chain.py  12_parallel_agents.py  13_opencode_direct.py  14_system_prompt.py  15_model_selection.py  16_max_turns.py  17_mcp_servers.py  18_config_options.py  19_cancel_session.py  20_session_fork.py  21_list_sessions.py  22_resume_session.py  23_streaming_updates.py  24_stop_reason.py  25_interrupt_with_session.py  26_agent_info.py  27_rich_content.py  28_rate_limit_awareness.py
python/conduit_sdk/: __init__.py  _conduit_sdk.pyi  activate.py  client.py  exceptions.py  hooks.py  options.py  permissions.py  proxy.py  query.py  registry.py  session.py  tools.py  types.py
src/: client.rs  control.rs  error.rs  hooks.rs  lib.rs  proxy.rs  session.rs  tools.rs  transport.rs  types.rs
tests/: test_activate.py  test_client.py  test_control.py  test_hooks.py  test_options.py  test_permissions.py  test_query.py  test_registry.py  test_session.py  test_tools.py  test_types.py
