[package]
name = "conduit-agent-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "_conduit_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
sacp = { git = "https://github.com/agentclientprotocol/rust-sdk" }
sacp-tokio = { git = "https://github.com/agentclientprotocol/rust-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
