[package]
name = "conduit-sdk"
version = "0.1.0"
edition = "2021"
description = "General-purpose Python SDK for the Agent Client Protocol (ACP)"
license = "MIT"
repository = "https://github.com/omoios/conduit-agent-sdk"

[lib]
name = "_conduit_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
sacp = { git = "https://github.com/agentclientprotocol/rust-sdk", features = ["unstable"] }
sacp-tokio = { git = "https://github.com/agentclientprotocol/rust-sdk" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
