[project]
name = "conduit-agent-sdk"
version = "0.1.0"
description = "General-purpose Python SDK for the Agent Client Protocol (ACP)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "conduit_sdk._conduit_sdk"
features = ["pyo3/extension-module"]
